# 2048

./: 2048.cpp  CMakeLists.txt  main2048.py
